Fixed flex wrap

--- a/src/assets/sass/layout/_wpClasses.scss
+++ b/src/assets/sass/layout/_wpClasses.scss
@@ -4,16 +4,12 @@
 body {
   background-size: contain;
   width: 100vw;
-  background-position:
-    top 0px left 0px,
-    top 1000px left 0px,
-    top 2000px left 0px,
-    bottom 0px left 0px;
-  background-image: 
-  url('~@/assets/img/backgrounds/heroBG1.png'),
-  url('~@/assets/img/backgrounds/sectionBG1.png'),
-  url('~@/assets/img/backgrounds/sectionBG2.png'),
-  url('~@/assets/img/backgrounds/footerBG.png');
+  background-position: top 0px left 0px, top 1000px left 0px,
+    top 2000px left 0px, bottom 0px left 0px;
+  background-image: url('~@/assets/img/backgrounds/heroBG1.png'),
+    url('~@/assets/img/backgrounds/sectionBG1.png'),
+    url('~@/assets/img/backgrounds/sectionBG2.png'),
+    url('~@/assets/img/backgrounds/footerBG.png');
 
   background-repeat: no-repeat;
 }
@@ -25,7 +21,6 @@ main {
 
 .wp-block-columns {
   display: flex;
-  flex-wrap: wrap;
   justify-content: space-around;
   width: 100%;
   margin: 0;
@@ -65,8 +60,7 @@ figure img {
 }
 
 .listStyleLogo ul {
-  list-style-image: 
-  url('~@/assets/img/listicons/logoGreen1.png');
+  list-style-image: url('~@/assets/img/listicons/logoGreen1.png');
 }
 
 .wp-block-quote {
